k8s/eso/eso.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eso
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    trust: "enabled"
