k8s/eso/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eso
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    trust: "enabled"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
